# buzhidao

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bot  Dockerfile.infer  Dockerfile.local  README.md  build.rs  buzhidao.code-workspace  deno.json  docker-compose.yml  import_map.json  main.py  main.ts  paddleocr-2.5.0.3-py2.py3-none-any.whl  paddleocr-2.7.3-py3-none-any.whl  paddleocr-2.8.0-py3-none-any.whl  tauri.conf.json  tauri.gpu.conf.json  tensorflow-2.15.0-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  vite.config.ts
.github/workflows/: release.yml
app/: .env.example  Cargo.toml  README.md  tauri.conf.json
app/capabilities/: default.json
app/src/: config.rs  lib.rs  main.rs  platform.rs  popup.rs  services.rs  settings.rs  window.rs
app/src/ocr/: cls.rs  det.rs  mod.rs  python_sidecar.rs  rec.rs
app/src/services/: capture.rs  mod.rs  ocr_pipeline.rs
app/ui/: README.md  deno.json  vite.config.ts
app/ui/src/: app-hooks.ts  detection.ts  detection_test.ts  loading.html  loading.ts  loading_test.ts  overlay.tsx  popup.html  popup.tsx  settings.html  settings.tsx  settings_save_state.ts  settings_save_state_test.ts
docs/: index.html
docs/changes/: 1775148476-refactor-core-flow.md  1775237938-refactor-io-and-caching.md  1775238892-test-coverage-and-uv-setup.md  1775290317-tauri-migration.md  1775370901-fix-global-shortcut.md  1775376584-tray-popup-overlay-ux.md  1775377762-prtsc-overlay-guard.md  1775378558-restructure-tauri-centric.md  1775379754-fix-tauri-build-hooks-and-bundle-config.md  1775380766-fix-popup-close-action.md  1775381654-review-and-add-core-tests.md  1775382656-refactor-cross-project-core-modules.md  1775383022-refactor-src-lib-rs.md  1775383481-refactor-src-tauri-modules.md  1775384580-move-tauri-project-into-app-directory.md  1775389350-default-system-prompt-fallback.md  1775390453-enforce-single-instance-app.md  1775535992-make-ocr-device-configurable.md  1775546490-fix-overlay-virtual-desktop-follow.md  1775605649-replace-python-ocr-with-onnx-runtime.md  1775626477-fix-ocr-preprocessing-and-postprocessing.md  1775690605-ocr-det-nms-and-recognition-improvement.md  1775694026-generalize-docker-onnx-export-and-ignore-generated-model-artifacts.md  1775697845-flatten-tauri-app-to-project-root.md  1775700440-enable-cuda-execution-provider-for-ocr.md  1775701922-prepare-platform-abstractions-for-multiplatform-support.md  1775702400-create-github-pages-index.md  1775711414-parameterize-ocr-benchmark-image-and-ignore-benchmarks.md  1775732369-gpu-ocr-performance-cls-batch-intra-threads.md  1775732657-gpu-ocr-warmup-rec-batch-resize-timing.md  1775736611-cuda-preload-dylibs.md  1775817381-rec-batch-width-sort-chunk.md  1775821517-ocr-performance-tuning-rec-cls-det.md  1775824554-ocr-recognition-work-split-and-det-safe-default.md  (+119 more)
ocr/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.gpu.yaml  docker-compose.yaml  live_endpoint_check.py  main.py  pyproject.gpu.toml  test_main.py
ocr_server/: README.md  build.py  gpu_import_check.py  ocr_server.py  pyproject.toml
ocr_server/tests/: test_pure.py
scripts/: bench_paddleocr_cpu.py  build_paddle_ocr_sidecar.py  compare_onnx.py  export_onnx.py  export_onnx_docker.py  paddle_ocr_sidecar.py  release_helper.py  test_release_helper.py
server/: .env.example  Dockerfile  main.py  requirements.txt  test_main.py
shared/: langs.json
src/: app.tsx  config.rs  detection.ts  detection_test.ts  env_keys.rs  index.html  language.rs  lib.rs  main.rs  overlay.tsx  paddle_models.rs  platform.rs  popup.rs  runtime_setup.rs  services.rs  settings.rs  telegram.ts  window.rs
src-tauri/: Cargo.toml  tauri.conf.json
ui/: README.md  deno.json  vite.config.ts
(+121 files in other folders)
