[package]
name = "buzhidao"
version = "0.6.0"
edition = "2021"

[features]
default = ["paddle-ffi"]
gpu = []
paddle-ffi = []

[lib]
name = "buzhidao_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
xcap = "0.9"
image = "0.25"
dotenvy = "0.15"
dirs = "6"
tar = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "screencast"] }
pipewire = "0.9"
