[package]
name = "buzhidao"
version = "0.1.0"
edition = "2021"

[lib]
name = "buzhidao_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
screenshots = "0.8"
image = "0.24"
dotenvy = "0.15"
