[project]
name = "ocr-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "paddlex[ocr-core]==3.3.13",
  "paddleocr==3.3.0",
]

[dependency-groups]
build = [
  "pyinstaller==6.16.0",
]
cpu = [
  "paddlepaddle==3.2.2",
]
gpu = [
  "paddlepaddle-gpu==3.2.2",
]

[tool.uv]
package = false

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle-cu118" }

[[tool.uv.index]]
name = "paddle-cu118"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
